
2025-01-09: Went back to loading on first game tick because apparently it just works

2025-01-09: Added a time zone calculation based on the local time to the leagues V beginning date
	to minimize the chance of somebody's data getting quarantined for no reason

2025-01-10: Implemented 3D tile tracking. Older heatmap files will be converted as if all of their coords are on plane 0

----You are Here----

TODO: check out how LootManager sent their in-game update message to the chatbox in all red	text

TODO: Test for carrying over V1 heatmaps (and V2 ig)

TODO: Test for switching actual accounts (I Say)

TODO: Test on Windows

TODO: Test logging into Leagues V first and then switching to a normal account

TODO: Remove any temporary log.debugs()

** UPDATE TO BE RELEASED **

TODO: LOOT_VALUE is kinda useless because it's dependent on both the amount of loot dropped by each NPCs, and the frequency at which people kill them.
	Not sure if it's possible, but an AVERAGE_LOOT_VALUE would be much more informative. However, I suppose that would be information that is already available on the wiki.

TODO: Implement memory-saving method where:
	- only heatmap metadata is loaded from disk on startup (e.g. num tiles, total value)
		- This means I'd have to re-include them in toCSV()
	- only the newly incremented tiles are kept in memory
	- on save, the rest of the heatmap is loaded from disk, the new tiles are added to it, then it is rewritten
		- this means that the working file cannot be modified meanwhile. I suppose that was always the case doe
	- on image write and data upload, the file will be reloaded too

TODO: Update world map image

TODO: Make it so that the button that opens the website includes some user-agent/referrer deets about where the user was referred from (the plugin)

TODO: Make HeatmapNew.estimateSize not a static method

TODO: Make an auto-image button for each heatmap type instead of only having the option for both Type A and Type B
