@@ -314,7 +314,11 @@ NOTE: Will need to include a warning and an opt-in checkbox for global heatmap d
 
 2025-01-10: Implemented 3D tile tracking. Older heatmap files will be converted as if all of their coords are on plane 0
 
+2025-01-10: Got legacy heatmap conversion to work with leagues decontamination
+
 ----You are Here----
+
+TODO: make sure that getLatestHeatmapFile() only runs in the executor because it can result in heavy I/O
 
 TODO: check out how LootManager sent their in-game update message to the chatbox in all red	text
 
@@ -325,8 +329,6 @@ TODO: Test for switching actual accounts (I Say)
 TODO: Test on Windows
 
 TODO: Test logging into Leagues V first and then switching to a normal account
-
-TODO: Remove any temporary log.debugs()
 
 ** UPDATE TO BE RELEASED **
 
